# tokencomic-stellar

./: .env  .gitignore  Cargo.toml  README.md  SorobanNFT.rs  dockerfile  metadata.json  next.config.js  nixpacks.toml  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
.stellar/network/: mainnet.toml
frontend/: globals.d.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
src/: soroban_nft.rs  test.rs  wagmi.ts
src/app/: WalletProvider.tsx  abi.ts  globals.css  layout.tsx  mint-nft.tsx  mint-nft1 MONOLITO.tsx  mint-nft1 copy 2.tsx  mint-nft1 copy 3.tsx  mint-nft1 copy 5.tsx  mint-nft1 copy.tsx  mint-nft1 copy1.tsx  mint-nft1.tsx  mint-nft2.tsx  mint-nft3.tsx  mint-nft4.tsx  mint-nft5.tsx  page.tsx  providers.tsx  text
src/app/about/: page.jsx
src/app/api/getLastToken/: route.ts
src/app/boton/: page.tsx
src/app/chapter1/: abi.ts  page.jsx
src/app/chapter2/: page.jsx
src/app/chapter3/: page.jsx
src/app/chapter4/: page.jsx
src/app/chapter5/: page.jsx
src/app/contact/: page.jsx
src/app/coomingSoon/: page.jsx
src/app/suspended/: page.jsx
src/app/work/: page.jsx
src/components/ui/: AnimatedCircle.tsx  ApiTester.tsx  ConectButtons.tsx  FetchMetadata.tsx  Header.tsx  MobileNav.tsx  Nav.tsx  NftCards.tsx  NftCards1.tsx  NftCards2.tsx  NftCards3.tsx  NftCards4.tsx  NftCards5.tsx  NftCardsSuspended.tsx  PageTransition.jsx  PageTransition.tsx  Photo.jsx  StairTransition.tsx  Stairs.tsx  TokenIdFetcher.tsx  button.tsx  dialog.tsx  scroll-area.tsx
(+21 files in other folders)
