[package]
name = "SorobanNFT"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = "21.7.7"

[lib]
name = "soroban_nft"
path = "SorobanNFT.rs"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
